Updated footer and styling

--- a/about.html
+++ b/about.html
@@ -390,7 +390,10 @@
         </div>
       </div>
     </footer>
-
+    <!-- WhatsApp Float -->
+    <a href="https://wa.me/254723562484" class="whatsapp-float" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
     <script src="about.js"></script>
   </body>
 </html>
