--- a/services.html
+++ b/services.html
@@ -27,8 +27,8 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html" class="active">About</a></li>
-            <li><a href="services.html">Services</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="services.html" class="active">Services</a></li>
             <li><a href="blog.html">Legal Insights</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li>
@@ -513,6 +513,10 @@
         </div>
       </div>
     </footer>
+    <!-- WhatsApp Float -->
+    <a href="https://wa.me/254723562484" class="whatsapp-float" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
 
     <script src="services.js"></script>
   </body>
