--- a/blog.html
+++ b/blog.html
@@ -28,9 +28,9 @@
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html" class="active">About</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
-            <li><a href="blog.html">Legal Insights</a></li>
+            <li><a href="blog.html" class="active">Legal Insights</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li>
               <a href="contact.html" class="btn">Schedule Consultation</a>
@@ -518,7 +518,10 @@
         </div>
       </div>
     </footer>
-
+    <!-- WhatsApp Float -->
+    <a href="https://wa.me/254723562484" class="whatsapp-float" target="_blank">
+      <i class="fab fa-whatsapp"></i>
+    </a>
     <script src="blog.js"></script>
   </body>
 </html>
