Implemented 3D Swiper carousel for Services section

--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
         <h1>Contact Our Legal Team</h1>
         <ul class="breadcrumb">
           <li><a href="index.html">Home</a></li>
+          <li>|</li>
           <li>Contact</li>
         </ul>
       </div>
@@ -54,7 +55,7 @@
     <section class="section">
       <div class="container">
         <div class="contact-intro">
-          <h2 class="section-title">Get In Touch With Us</h2>
+          <h1 class="section-title">Get In Touch With Us</h1>
           <p>
             We're here to help with your legal needs. Whether you have questions
             about our services, need to schedule a consultation, or require
@@ -88,14 +89,16 @@
             </div>
             <h3>Visit Our Office</h3>
             <p>Schedule an appointment to meet with us in person</p>
-            <a href="#location" class="btn">Get Directions</a>
+            <a href="https://maps.app.goo.gl/oH6qqLpqKJx3jac66" class="btn"
+              >Get Directions</a
+            >
           </div>
         </div>
 
         <!-- Contact Form & Info -->
         <div class="contact-main">
           <div class="contact-form-container">
-            <h2>Send Us a Message</h2>
+            <h1>Send Us a Message</h1>
             <p>
               Fill out the form below and we'll get back to you as soon as
               possible.
@@ -147,7 +150,7 @@
           </div>
 
           <div class="contact-info-sidebar">
-            <h3>Contact Information</h3>
+            <h1>Contact Information</h1>
 
             <div class="info-item">
               <div class="info-icon">
@@ -208,16 +211,18 @@
     <!-- Map Section -->
     <section class="section map-section" id="location">
       <div class="container">
-        <h2 class="section-title">Our Location</h2>
+        <h1 class="section-title">Our Location</h1>
         <div class="map-container">
-          <div class="map-placeholder">
-            <i class="fas fa-map-marked-alt"></i>
-            <h3>Hebron Complex, First Floor</h3>
-            <p>Machakos, Kenya</p>
-            <p>Directions will be displayed here when map is integrated</p>
-          </div>
-          <!-- In a real implementation, you would embed a Google Map here -->
-          <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3980.552321366938!2d37.26424241475398!3d-1.5172989989617575!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMcKwMzEnMDIuMyJTIDM3wrAxNicwMC4xIkU!5e0!3m2!1sen!2ske!4v1612345678901!5m2!1sen!2ske" width="100%" height="100%" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe> -->
+          <div class="map-placeholder"></div>
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3235.3950381599875!2d37.2695326!3d-1.5189462!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f80cc96bf3481%3A0x251d01cedba608d3!2sHEBRON%20COMPLEX!5e1!3m2!1sen!2ske!4v1764182000275!5m2!1sen!2ske"
+            width="1200"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </div>
     </section>
