--- a/about.html
+++ b/about.html
@@ -45,6 +45,7 @@
         <h1>About Our Firm</h1>
         <ul class="breadcrumb">
           <li><a href="index.html">Home</a></li>
+          <li>|</li>
           <li>About Us</li>
         </ul>
       </div>
@@ -75,6 +76,7 @@
               We take pride in our ability to navigate complex legal challenges
               and deliver favorable outcomes.
             </p>
+            <br />
             <a href="contact.html" class="btn">Contact Us Today</a>
           </div>
           <div class="about-image">
@@ -127,12 +129,12 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://images.unsplash.com/photo-1560250097-0b93528c311a?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80"
+                src="https://media.licdn.com/dms/image/v2/D4D16AQFwSSbxAFJSaA/profile-displaybackgroundimage-shrink_200_800/profile-displaybackgroundimage-shrink_200_800/0/1676964499754?e=1766016000&v=beta&t=HT--JEdPvgZCDdhmxgtW8r2pcrq9SYc6rDz1v2OtI1U"
                 alt="Advocate Mutinda"
               />
             </div>
             <div class="member-info">
-              <h3 class="member-name">John Mutinda</h3>
+              <h3 class="member-name">Adv. Mutinda</h3>
               <p class="member-position">Senior Partner</p>
               <p class="member-bio">
                 With over 20 years of experience in litigation and corporate
@@ -146,12 +148,12 @@
           <div class="team-member">
             <div class="member-image">
               <img
-                src="https://images.unsplash.com/photo-1582750433449-648ed127bb54?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80"
+                src="https://media.licdn.com/dms/image/v2/D4D03AQFkC_90PC1ZEA/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1721125845630?e=1766016000&v=beta&t=WBp_E67qhT4RAxn8fy_gQWpjAa1GAkwX_gqhFqF_RAs"
                 alt="Advocate Musyoka"
               />
             </div>
             <div class="member-info">
-              <h3 class="member-name">David Musyoka</h3>
+              <h3 class="member-name">Adv. Musyoka</h3>
               <p class="member-position">Managing Partner</p>
               <p class="member-bio">
                 Specializing in commercial law and real estate, Advocate Musyoka
