--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div>
             <img
-              src="https://images.unsplash.com/photo-1589391886645-d51941baf7fb?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80"
+              src="https://media.licdn.com/dms/image/v2/D4D16AQFwSSbxAFJSaA/profile-displaybackgroundimage-shrink_200_800/profile-displaybackgroundimage-shrink_200_800/0/1676964499754?e=1766016000&v=beta&t=HT--JEdPvgZCDdhmxgtW8r2pcrq9SYc6rDz1v2OtI1U"
               alt="Law Firm Office"
               style="
                 width: 100%;
@@ -256,6 +256,7 @@
           ><i class="fas fa-phone"></i> Call Now</a
         >
 
+        <!--  -->
         <div class="contact-info">
           <div class="contact-item">
             <div class="contact-icon">
