Implemented 3D Swiper carousel for Services section

--- a/about.html
+++ b/about.html
@@ -80,10 +80,7 @@
             <a href="contact.html" class="btn">Contact Us Today</a>
           </div>
           <div class="about-image">
-            <img
-              src="https://images.unsplash.com/photo-1563453392212-326f5e854473?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80"
-              alt="Our Office"
-            />
+            <img src="musyoka&mutinda logo.png" alt="Our Office" />
           </div>
         </div>
       </div>
@@ -147,10 +144,7 @@
           </div>
           <div class="team-member">
             <div class="member-image">
-              <img
-                src="https://media.licdn.com/dms/image/v2/D4D03AQFkC_90PC1ZEA/profile-displayphoto-shrink_100_100/profile-displayphoto-shrink_100_100/0/1721125845630?e=1766016000&v=beta&t=WBp_E67qhT4RAxn8fy_gQWpjAa1GAkwX_gqhFqF_RAs"
-                alt="Advocate Musyoka"
-              />
+              <img src="musyoka&mutinda logo.png" alt="Advocate Musyoka" />
             </div>
             <div class="member-info">
               <h3 class="member-name">Adv. Musyoka</h3>
