--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           </div>
           <div>
             <img
-              src="https://media.licdn.com/dms/image/v2/D4D16AQFwSSbxAFJSaA/profile-displaybackgroundimage-shrink_200_800/profile-displaybackgroundimage-shrink_200_800/0/1676964499754?e=1766016000&v=beta&t=HT--JEdPvgZCDdhmxgtW8r2pcrq9SYc6rDz1v2OtI1U"
+              src="musyoka&mutinda logo.png"
               alt="Law Firm Office"
               style="
                 width: 100%;
