Updated Services section to horizontal layout and improved styling

--- a/index.html
+++ b/index.html
@@ -58,72 +58,73 @@
         <a href="contact.html" class="btn">Schedule a Consultation</a>
       </div>
     </section>
-
-    <!-- Services Section -->
     <section class="section" id="services">
       <div class="container">
-        <h2 class="section-title">Our Legal Services</h2>
-        <div class="services-grid">
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-gavel"></i>
+        <h1 class="section-title">Our Legal Services</h1>
+
+        <!-- Swiper Container -->
+        <div class="swiper services-swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide service-card">
+              <div class="service-icon"><i class="fas fa-gavel"></i></div>
+              <h3>Litigation & Dispute Resolution</h3>
+              <p>
+                Expert representation in civil and commercial litigation with a
+                strong track record of favorable outcomes.
+              </p>
             </div>
-            <h3>Litigation & Dispute Resolution</h3>
-            <p>
-              Expert representation in civil and commercial litigation with a
-              strong track record of favorable outcomes.
-            </p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-briefcase"></i>
+
+            <div class="swiper-slide service-card">
+              <div class="service-icon"><i class="fas fa-briefcase"></i></div>
+              <h3>Corporate & Commercial Law</h3>
+              <p>
+                Strategic legal advisory for businesses, including company
+                formation, contracts, and complex transactions.
+              </p>
             </div>
-            <h3>Corporate & Commercial Law</h3>
-            <p>
-              Strategic legal advisory for businesses, including company
-              formation, contracts, and complex transactions.
-            </p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-home"></i>
+
+            <div class="swiper-slide service-card">
+              <div class="service-icon"><i class="fas fa-home"></i></div>
+              <h3>Conveyancing & Real Estate</h3>
+              <p>
+                Professional handling of property transactions, leases, land
+                transfers, and title dispute resolutions.
+              </p>
             </div>
-            <h3>Conveyancing & Real Estate</h3>
-            <p>
-              Professional handling of property transactions, leases, land
-              transfers, and title dispute resolutions.
-            </p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-users"></i>
+
+            <div class="swiper-slide service-card">
+              <div class="service-icon"><i class="fas fa-users"></i></div>
+              <h3>Family & Succession Law</h3>
+              <p>
+                Supportive counsel on divorce, child custody, adoption, wills,
+                trusts, and estate succession planning.
+              </p>
             </div>
-            <h3>Family & Succession Law</h3>
-            <p>
-              Supportive counsel on divorce, child custody, adoption, wills,
-              trusts, and estate succession planning.
-            </p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-shield-alt"></i>
+
+            <div class="swiper-slide service-card">
+              <div class="service-icon"><i class="fas fa-shield-alt"></i></div>
+              <h3>Criminal Defense</h3>
+              <p>
+                Strong and strategic defense to protect legal rights, secure
+                fair justice, and ensure due process.
+              </p>
             </div>
-            <h3>Criminal Defense</h3>
-            <p>
-              Strong and strategic defense to protect legal rights, secure fair
-              justice, and ensure due process.
-            </p>
-          </div>
-          <div class="service-card">
-            <div class="service-icon">
-              <i class="fas fa-balance-scale"></i>
+
+            <div class="swiper-slide service-card">
+              <div class="service-icon">
+                <i class="fas fa-balance-scale"></i>
+              </div>
+              <h3>Constitutional & Human Rights</h3>
+              <p>
+                Advocating for fundamental rights and freedoms through
+                constitutional petitions and public interest litigation.
+              </p>
             </div>
-            <h3>Constitutional & Human Rights</h3>
-            <p>
-              Advocating for fundamental rights and freedoms through
-              constitutional petitions and public interest litigation.
-            </p>
           </div>
+
+          <!-- Navigation Arrows 
+          <div class="swiper-button-next"></div>
+          <div class="swiper-button-prev"></div>-->
         </div>
       </div>
     </section>
@@ -133,7 +134,7 @@
       <div class="container">
         <div class="about-content">
           <div>
-            <h2 class="section-title">17+ Years of Legal Excellence</h2>
+            <h1 class="section-title">17+ Years of Legal Excellence</h1>
             <p>
               Founded in 2006, Mutinda and Musyoka Company Advocates has
               established itself as a premier law firm in Machakos and
@@ -149,22 +150,22 @@
 
             <div class="stats">
               <div class="stat-item">
-                <span class="stat-number">17+</span>
+                <span class="stat-number" data-target="17">0</span>
                 <span class="stat-label">Years Experience</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number">7</span>
+                <span class="stat-number" data-target="7">0</span>
                 <span class="stat-label">Legal Experts</span>
               </div>
               <div class="stat-item">
-                <span class="stat-number">500+</span>
+                <span class="stat-number" data-target="500">0</span>
                 <span class="stat-label">Cases Handled</span>
               </div>
             </div>
           </div>
           <div>
             <img
-              src="musyoka&mutinda logo.png"
+              src="https://images.unsplash.com/photo-1589829545856-d10d557cf95f?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
               alt="Law Firm Office"
               style="
                 width: 100%;
@@ -180,13 +181,13 @@
     <!-- Values Section -->
     <section class="section" id="values">
       <div class="container">
-        <h2 class="section-title">Our Core Values</h2>
+        <h1 class="section-title">Our Core Values</h1>
         <div class="values-grid">
           <div class="value-card">
             <div class="value-icon">
               <i class="fas fa-handshake"></i>
             </div>
-            <h3>Integrity</h3>
+            <h2>Integrity</h2>
             <p>
               We uphold the highest standards of honesty, ethics, and
               transparency in all our dealings.
@@ -196,7 +197,7 @@
             <div class="value-icon">
               <i class="fas fa-award"></i>
             </div>
-            <h3>Excellence</h3>
+            <h2>Excellence</h2>
             <p>
               We are committed to delivering top-tier legal services with
               precision, expertise, and quality.
@@ -206,7 +207,7 @@
             <div class="value-icon">
               <i class="fas fa-user-tie"></i>
             </div>
-            <h3>Professionalism</h3>
+            <h2>Professionalism</h2>
             <p>
               We maintain the utmost legal standards, respect for the court, and
               unwavering respect for our clients.
@@ -216,7 +217,7 @@
             <div class="value-icon">
               <i class="fas fa-users"></i>
             </div>
-            <h3>Client-Centered</h3>
+            <h2>Client-Centered</h2>
             <p>
               Your success is our priority. We provide customized legal
               solutions tailored to your unique needs.
@@ -229,7 +230,7 @@
     <!-- Testimonials Section -->
     <section class="section testimonials" id="testimonials">
       <div class="container">
-        <h2 class="section-title">Trusted by Clients Across Kenya</h2>
+        <h1 class="section-title">Trusted by Clients Across Kenya</h1>
         <div class="testimonial-card">
           <p class="testimonial-text">
             "Mutinda and Musyoka Advocates provided exceptional representation
@@ -247,7 +248,7 @@
     <!-- CTA Section -->
     <section class="cta" id="contact">
       <div class="container">
-        <h2>Schedule Your Consultation Today</h2>
+        <h1>Schedule Your Consultation Today</h1>
         <p>
           Let our legal experts safeguard your rights and business interests.
           Contact us to discuss your legal needs.
@@ -263,7 +264,7 @@
               <i class="fas fa-map-marker-alt"></i>
             </div>
             <div>
-              <h4>Location</h4>
+              <h2>Location</h2>
               <p>Hebron Complex, First Floor, Machakos</p>
             </div>
           </div>
@@ -272,7 +273,7 @@
               <i class="fas fa-phone"></i>
             </div>
             <div>
-              <h4>Phone</h4>
+              <h2>Phone</h2>
               <p>0723562484</p>
             </div>
           </div>
@@ -281,7 +282,7 @@
               <i class="fas fa-envelope"></i>
             </div>
             <div>
-              <h4>Email</h4>
+              <h2>Email</h2>
               <p>info@mutindaandmusyoka.co.ke</p>
             </div>
           </div>
