Updated services section with Swiper slider, endless loop, and improved JS

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                   Expert representation in civil and commercial litigation with
                   strong outcomes.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#litigation" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -122,7 +124,9 @@
                   Strategic legal advisory for contracts, business formation,
                   and transactions.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#corporate" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -139,7 +143,9 @@
                   Professional handling of property sales, leases, land
                   transfers, and title issues.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#conveyancing" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -156,7 +162,9 @@
                   Guidance on divorce, child custody, wills, trusts, and
                   succession planning.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#family" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -173,7 +181,9 @@
                   Strategic defense to protect legal rights and ensure fair
                   justice.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#criminal" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -190,7 +200,9 @@
                   Advocating for fundamental freedoms and public interest
                   litigation.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#human-rights" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -207,7 +219,9 @@
                   Legal support for contracts, compliance, insurance disputes,
                   and liability.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#corporate" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -227,7 +241,9 @@
                   Compensation claims for accidents, workplace injuries, and
                   negligence.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#human-rights" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -244,7 +260,9 @@
                   Protecting the welfare of minors in custody, adoption, and
                   guardianship.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#family" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -261,7 +279,9 @@
                   Support in property rights, domestic disputes, and safety
                   protection.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#human-rights" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -278,7 +298,9 @@
                   Free or low-cost legal help for underserved and marginalized
                   groups.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#human-rights" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -297,7 +319,9 @@
                 <p>
                   Resolving disputes outside court through peaceful mediation.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#litigation" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -317,7 +341,9 @@
                   Structured negotiations for commercial, land, and family
                   disputes.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#litigation" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
 
@@ -334,7 +360,9 @@
                   Representing unions, employers, and workers in labor law
                   cases.
                 </p>
-                <a href="services.html" class="service-btn">Learn More</a>
+                <a href="services.html#corporate" class="service-btn"
+                  >Learn More</a
+                >
               </div>
             </div>
           </div>
@@ -611,7 +639,7 @@
             </a>
             <p>
               Providing exceptional legal services in Machakos and throughout
-              Kenya for over 17 years. Your trusted partners for all legal
+              Kenya for over 10 years. Your trusted partners for all legal
               matters.
             </p>
           </div>
