UI: header & mobile menu fixes; JS toggle + header scroll effects; CSS tweaks

--- a/team.html
+++ b/team.html
@@ -402,7 +402,7 @@
               <h3 class="member-name">Everlyne Muia</h3>
               <p class="member-position">Executive Administrative Assistant</p>
               <p class="member-bio">
-                Everlyn provides compassionate yet effective representation in
+                Everlyne provides compassionate yet effective representation in
                 family law matters, including divorce, child custody, and
                 succession planning. Her empathetic approach helps clients
                 navigate emotionally challenging legal processes.
